Initial implementation of a backstage-repo-tools create-fix-package-info-yamls command
Signed-off-by: Eric Peterson <ericpeterson@spotify.com>

--- a/packages/repo-tools/package.json
+++ b/packages/repo-tools/package.json
@@ -32,6 +32,7 @@
   "dependencies": {
     "@apidevtools/swagger-parser": "^10.1.0",
     "@apisyouwonthate/style-guide": "^1.4.0",
+    "@backstage/catalog-model": "workspace:^",
     "@backstage/cli-common": "workspace:^",
     "@backstage/cli-node": "workspace:^",
     "@backstage/errors": "workspace:^",
@@ -46,6 +47,7 @@
     "@stoplight/spectral-runtime": "^1.1.2",
     "@stoplight/types": "^13.14.0",
     "chalk": "^4.0.0",
+    "codeowners-utils": "^1.0.2",
     "commander": "^9.1.0",
     "fs-extra": "10.1.0",
     "glob": "^8.0.3",
@@ -54,7 +56,8 @@
     "lodash": "^4.17.21",
     "minimatch": "^5.1.1",
     "p-limit": "^3.0.2",
-    "ts-node": "^10.0.0"
+    "ts-node": "^10.0.0",
+    "yaml-diff-patch": "^2.0.0"
   },
   "devDependencies": {
     "@backstage/cli": "workspace:^",
