Add post-commit lint hook that generates/fixes catalog-info.yaml files
Signed-off-by: Eric Peterson <ericpeterson@spotify.com>

--- a/package.json
+++ b/package.json
@@ -92,6 +92,9 @@
     "*.{json,md}": [
       "prettier --write"
     ],
+    "{plugins,packages}/*/{package.json,catalog-info.yaml}": [
+      "backstage-repo-tools create-fix-package-info-yamls"
+    ],
     "*.md": [
       "node ./scripts/check-docs-quality"
     ],
